fixed ollama4js module-info